# lucid

./: .cursorrules  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: LUCID_ASSUMED_GUARANTEES.md  LUCID_BOUNDARIES.md  LUCID_COMPETITION_ALIGNMENT.md  LUCID_MOONSHOT.md  LUCID_OPERATING_MANUAL.md  LUCID_STACK_INTERACTION.md  LUCID_TERMINOLOGY_GUIDE_LLM.md  lucid.md
docs/archive/: LUCID_contracts_master_bundle_v1.0.1_ARCHIVED.md  README.md
docs/benchmark_packs/: unified_core_m07.md
docs/benchmark_quality/: LUCID_DEFENSIBILITY_STANDARD.md
docs/contracts/: LUCID_ARTIFACT_BUNDLE_CONTRACT.md  LUCID_BENCHMARK_IDENTITY_CONTRACT.md  LUCID_CHANGE_CONTROL.md  LUCID_CONFIDENCE_CONTRACT.md  LUCID_CONTRACT_INDEX.md  LUCID_DETERMINISTIC_GENERATION_CONTRACT.md  LUCID_DRIFT_TAXONOMY_CONTRACT.md  LUCID_EPISODE_STRUCTURE_CONTRACT.md  LUCID_MINIMAL_GREEN_PATH_CONTRACT.md  LUCID_OUTPUT_SCHEMA_CONTRACT.md  LUCID_REFUSAL_CONTRACT.md  LUCID_SCORING_CONTRACT.md  LUCID_SCORING_PROFILE_v1.1.0.md  LUCID_SUBMISSION_DOCTRINE.md  LUCID_TEMPLATE_FAMILY_CONTRACT.md
docs/families/: LUCID_TEMPLATE_FAMILY_SYMBOLIC_NEGATION_V1.md  contradiction_clarification_v1.md  scope_precedence_exception_v1.md
docs/kaggle/: LUCID_KAGGLE_NOTEBOOK_CONTRACT.md  LUCID_KAGGLE_NOTEBOOK_M04_FAMILY1_ANALYTICS.md
docs/milestones/M00/: M00_audit.md  M00_plan.md  M00_run1.md  M00_summary.md  M00_toolcalls.md
docs/milestones/M01/: M01_KAGGLE_EVIDENCE_TEMPLATE.md  M01_KAGGLE_RUNBOOK.md  M01_audit.md  M01_plan.md  M01_plan_stub.md  M01_run1.md  M01_summary.md  M01_toolcalls.md
docs/milestones/M02/: M02_audit.md  M02_plan.md  M02_run1.md  M02_summary.md  M02_toolcalls.md
docs/milestones/M03/: M03_audit.md  M03_plan.md  M03_run1.md  M03_summary.md  M03_toolcalls.md
docs/milestones/M04/: M04_audit.md  M04_plan.md  M04_run1.md  M04_run2.md  M04_summary.md  M04_toolcalls.md
docs/milestones/M05/: M05_audit.md  M05_plan.md  M05_run1.md  M05_summary.md  M05_toolcalls.md
docs/milestones/M06/: M06_audit.md  M06_plan.md  M06_run1.md  M06_summary.md  M06_toolcalls.md
notebooks/: README.md  lucid_kaggle_benchmark.ipynb  lucid_kaggle_family1_m04_analytics.ipynb  lucid_kaggle_m09_mature_evidence.ipynb  lucid_kaggle_m11_probe_p12.ipynb  lucid_kaggle_m11_probe_p24.ipynb  lucid_kaggle_m11_probe_p48.ipynb  lucid_kaggle_transport_text_adapter_m_01.ipynb  lucid_kaggle_transport_text_adapter_m_01_notebook_cells.md
notebooks/archive/: README.md  lucid_kaggle_benchmark_SCHEMA_SUPERSEDED.ipynb
scripts/: analyze_family1_core_m03.py  generate_family1_core_m03_manifest.py  generate_family1_m04_notebook.py  generate_family2_core_m05_manifest.py  generate_family3_core_m06_manifest.py  generate_kaggle_notebook.py  generate_m09_kaggle_notebook.py  generate_m09_panel_artifact.py  generate_m10_figures.py  generate_m10_tables.py  generate_m11_figures.py  generate_m11_kaggle_notebooks.py  generate_m11_notebook_release_manifest.py  generate_m11_probe_artifacts.py  generate_m11_tables.py  generate_m12_submission_linkage.py  generate_unified_core_m07_manifest.py  ingest_m11_platform_exports.py  m10_common.py  m11_ingest_common.py  run_family1_pack_smoke.py  run_family2_pack_smoke.py  run_family3_pack_smoke.py  run_local_smoke.py  run_unified_defensibility_audit.py  run_unified_pack_smoke.py  summarize_family1_model_results.py  verify_m11_git_has_module.py  verify_wheel_has_kaggle.py
src/lucid/: __init__.py  canonical_json.py  drift.py  generator.py  hashing.py  models.py  parser.py  runner.py  runner_family2.py  runner_family3.py  runner_unified.py  scorer.py  writer.py
tests/: test_analyze_family1_core_m03_script.py  test_family1_core_m03_pack.py  test_family2_core_m05_pack.py  test_family3_core_m06_pack.py  test_kaggle_episode_llm.py  test_kaggle_notebook.py  test_kaggle_text_adapter.py  test_local_smoke_e2e.py  test_m09_evidence_panel.py  test_m11_ingest.py  test_m11_package_visibility.py  test_m11_probe_panels.py  test_m12_submission_linkage.py  test_parser_generator_drift.py  test_scorer_branches.py  test_scoring_profile.py  test_summarize_family1_model_results_script.py  test_symbolic_negation_family.py  test_unified_core_m07_pack.py  test_unified_defensibility_audit.py
tests/integration/: test_kaggle_transport_equivalence.py
(+123 files in other folders)
